# vcd-oxide

./: .gitignore  Cargo.toml  Makefile.toml  README.md
simulations/: Makefile  counter.sv
vcd-oxide/: Cargo.toml
vcd-oxide-core/: Cargo.toml
vcd-oxide-core/src/: lib.rs
vcd-oxide-parser/: Cargo.toml
vcd-oxide-parser/grammar/: vcd.pest
vcd-oxide-parser/src/: ast.rs  lib.rs  model.rs
vcd-oxide-parser/src/snapshots/: vcd_oxide_parser__test__large_vcd_file.snap  vcd_oxide_parser__test__model.snap  vcd_oxide_parser__test__model_against_uart.snap  vcd_oxide_parser__test__vcd_declaration_command.snap  vcd_oxide_parser__test__vcd_declaration_command.snap.new  vcd_oxide_parser__test__vcd_file.snap  vcd_oxide_parser__test__vcd_file.snap.new  vcd_oxide_parser__test__vcd_parser.snap
vcd-oxide-parser/test/: NextCoreTest.vcd  UartRxTest.vcd  UartTxTest.vcd  declaration_command.vcd.test
vcd-oxide-wavejson/: Cargo.toml
vcd-oxide-wavejson/src/: lib.rs  types.rs
vcd-oxide-wavejson/src/snapshots/: vcd_oxide_wavejson__test__deserialize_sample_wavejson.snap  vcd_oxide_wavejson__test__deserialize_sample_wavejson.snap.new  vcd_oxide_wavejson__test__serialize_empty_signal.snap  vcd_oxide_wavejson__test__serialize_positive_edge_wave.snap
vcd-oxide-wavejson/test/res/: simple.json
vcd-oxide/src/: main.rs
