[package]
name = "vcd-oxide-wavejson"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.92"
vcd-oxide-parser = { path = "../vcd-oxide-parser" }

[dev-dependencies]
insta = { version = "1.8.0", features = ["json"] }

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
